--- a/teoria_dos_grafos_1.ipynb
+++ b/teoria_dos_grafos_1.ipynb
@@ -62,11 +62,12 @@
       },
       "outputs": [],
       "source": [
+        "#Criação da classe Grafo\n",
+        "\n",
         "class Graph:\n",
         "    def __init__(self, adjacency_matrix, adjacency_list):\n",
         "        self.adjacency_matrix = adjacency_matrix\n",
-        "        self.adjacency_list = adjacency_list\n",
-        "    "
+        "        self.adjacency_list = adjacency_list"
       ]
     },
     {
@@ -78,6 +79,8 @@
       },
       "outputs": [],
       "source": [
+        "#Leitor que recebe como parametro um arquivo .txt e retorna de um MATRIZ de adjascencia e uma LISTA de adjascencia \n",
+        "\n",
         "def read_graph(graph_txt):\n",
         "    len_graph = int(graph_txt[0])\n",
         "    adjacency_matrix = [[None] * len_graph for i in range(len_graph)]\n",
