--- a/teoria_dos_grafos_1.ipynb
+++ b/teoria_dos_grafos_1.ipynb
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "zi77MZx5q-yZ"
       },
@@ -72,7 +72,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "TyrTPuv6YIQb",
         "scrolled": true
@@ -102,24 +102,48 @@
     {
       "cell_type": "code",
       "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "Obu6CS36vHmd",
+        "outputId": "e6c848aa-f0c6-436a-c78c-989712116a8b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#Leitura de arquivos\n",
         "\n",
-        "arquivo_graph_1 = open(\"/content/sample_data/grafo_1.txt\", 'r').readlines()\n",
+        "arquivo_graph_1 = open(\"/content/drive/MyDrive/6 - codigos UFPB/grafo_1.txt\", 'r').readlines()\n",
         "m1, l1 = read_graph(arquivo_graph_1)\n",
         "graph_1 = Graph(m1, l1)\n",
         "\n",
-        "arquivo_graph_2 = open(\"/content/sample_data/grafo_2.txt\", 'r').readlines()\n",
+        "arquivo_graph_2 = open(\"/content/drive/MyDrive/6 - codigos UFPB/grafo_2.txt\", 'r').readlines()\n",
         "m2, l2 = read_graph(arquivo_graph_2)\n",
         "graph_2 = Graph(m2, l2)\n",
         "\n",
-        "arquivo_graph_3 = open(\"/content/sample_data/grafo_3.txt\", 'r').readlines()\n",
+        "arquivo_graph_3 = open(\"/content/drive/MyDrive/6 - codigos UFPB/grafo_3.txt\", 'r').readlines()\n",
         "m3, l3 = read_graph(arquivo_graph_3)\n",
         "graph_3 = Graph(m3, l3)"
       ],
       "metadata": {
         "id": "EKVJLyuLz8Os"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -134,7 +158,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "t4wwMbB7YIQd"
       },
@@ -161,9 +185,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OuLaBcdR1lYl",
-        "outputId": "036ec016-7993-463d-af31-c4f285b11399"
+        "outputId": "cb2b323a-f7ca-4376-eb32-d134a2adf80b"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -173,13 +197,13 @@
             "Grau máximo: 5\n",
             "Grau médio: 3.14\n",
             "\n",
-            "Grau mínimo: 0\n",
-            "Grau máximo: 4\n",
-            "Grau médio: 2.29\n",
+            "Grau mínimo: 4\n",
+            "Grau máximo: 5\n",
+            "Grau médio: 4.86\n",
             "\n",
-            "Grau mínimo: 6\n",
+            "Grau mínimo: 3\n",
             "Grau máximo: 6\n",
-            "Grau médio: 6.00\n",
+            "Grau médio: 4.86\n",
             "\n"
           ]
         }
@@ -197,7 +221,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "JxzAAd0WP3R1"
       },
@@ -220,17 +244,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "H9Qga9NK1EUd",
-        "outputId": "bd51566e-47c0-4324-84a8-9381436f3f17"
+        "outputId": "4bd11883-faad-4a78-9239-9097f6f412b7"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Sequência de graus: [2, 3, 3, 3, 3, 3, 5]\n",
-            "Sequência de graus: [0, 0, 3, 3, 3, 3, 4]\n",
-            "Sequência de graus: [6, 6, 6, 6, 6, 6, 6]\n"
+            "Sequência de graus: [4, 5, 5, 5, 5, 5, 5]\n",
+            "Sequência de graus: [3, 4, 4, 5, 6, 6, 6]\n"
           ]
         }
       ]
@@ -247,7 +271,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "T2Dz_OgNYIQe"
       },
@@ -281,9 +305,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PXYTmCUbyO7l",
-        "outputId": "f374327f-12a4-40f5-f79d-8e13268a972a"
+        "outputId": "73873ab6-d6a1-4e0d-aeef-b9fda9ae43b5"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -293,13 +317,13 @@
             "Vizinhança aberta: [1, 2, 4, 5, 6]\n",
             "Vizinhança fechada: [1, 2, 4, 5, 6, 3]\n",
             "\n",
-            "Grau: 0\n",
-            "Vizinhança aberta: []\n",
-            "Vizinhança fechada: [4]\n",
+            "Grau: 5\n",
+            "Vizinhança aberta: [2, 3, 4, 5, 7]\n",
+            "Vizinhança fechada: [2, 3, 4, 5, 7, 4]\n",
             "\n",
-            "Grau: 6\n",
-            "Vizinhança aberta: [1, 2, 3, 4, 6, 7]\n",
-            "Vizinhança fechada: [1, 2, 3, 4, 6, 7, 5]\n"
+            "Grau: 5\n",
+            "Vizinhança aberta: [1, 2, 3, 4, 7]\n",
+            "Vizinhança fechada: [1, 2, 3, 4, 7, 5]\n"
           ]
         }
       ]
@@ -316,7 +340,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "id": "Fxp1vo5_YIQf"
       },
@@ -339,9 +363,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "k5YoAOveyLF9",
-        "outputId": "452f1f43-3c3d-48fd-ff66-21987e19be05"
+        "outputId": "905b13b5-fb19-40b9-e1aa-fe0b7d86e5e0"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -370,7 +394,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "id": "LX7n-Pm_YIQf"
       },
@@ -397,9 +421,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lG6t20bJyF1N",
-        "outputId": "872cd3b8-da9e-4f3b-e1f3-d302bf628c6e"
+        "outputId": "b8e5ddaa-3c44-4d7c-e044-767453d4e38c"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -407,7 +431,7 @@
           "text": [
             "(False, 0)\n",
             "(False, 0)\n",
-            "(True, 6)\n"
+            "(False, 0)\n"
           ]
         }
       ]
@@ -427,7 +451,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "id": "Nr6QFQzmYIQg"
       },
@@ -455,9 +479,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MTXaHc39yBp-",
-        "outputId": "d3083e3f-a5ad-41ce-db9c-49322526ba42"
+        "outputId": "8f0b74fc-efd8-4888-972b-9ce3b796fdcf"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -465,7 +489,7 @@
           "text": [
             "False\n",
             "False\n",
-            "True\n"
+            "False\n"
           ]
         }
       ]
@@ -482,7 +506,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "id": "B8htoxruYIQh"
       },
@@ -511,9 +535,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NP7z-kwfx-IV",
-        "outputId": "1ffbb34d-c8a5-4e59-d18a-a09d25c251c5"
+        "outputId": "5cc410b0-ebed-45f2-d8cc-5519c51f3f60"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -523,7 +547,7 @@
             "\n",
             "Vértices universais: []\n",
             "\n",
-            "Vértices universais: [1, 2, 3, 4, 5, 6, 7]\n"
+            "Vértices universais: [2, 4, 7]\n"
           ]
         }
       ]
@@ -540,7 +564,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {
         "id": "GxEjAvP8YIQi"
       },
@@ -569,9 +593,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VpHMcjZKXztt",
-        "outputId": "ff291f12-7638-4084-fb31-c6ffa7620ccc"
+        "outputId": "b37de201-48a4-4aa9-d047-d7d4b5c7cdba"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -579,7 +603,7 @@
           "text": [
             "Vértices isolados: []\n",
             "\n",
-            "Vértices isolados: [4, 7]\n",
+            "Vértices isolados: []\n",
             "\n",
             "Vértices isolados: []\n"
           ]
@@ -598,13 +622,44 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "metadata": {
-        "id": "Xbwx4PeiYIQi"
+        "id": "Xbwx4PeiYIQi",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fd1445e7-f1a6-463e-c292-5f2e84ae461e"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n",
+            "True\n",
+            "False\n"
+          ]
+        }
+      ],
       "source": [
-        "#TODO"
+        "def is_sub_graph(graph, V, E):\n",
+        "\n",
+        "  total_v_graph = len(graph.adjacency_matrix)\n",
+        "  for v in V:\n",
+        "    if not(1 <= v <= total_v_graph):\n",
+        "      return False\n",
+        "    \n",
+        "  for e in E:\n",
+        "    if e[0] not in V or e[1] not in V:\n",
+        "      return False\n",
+        "    if graph.adjacency_matrix[e[0] - 1][e[1] - 1] == 0:\n",
+        "      return False\n",
+        "\n",
+        "  return True\n",
+        "\n",
+        "print(is_sub_graph(graph_1, [1, 2, 3, 4, 5, 6, 7], [(8, 7)]))\n",
+        "print(is_sub_graph(graph_1, [1, 2, 3, 4, 5, 6, 7], [(1, 2), (3, 5)]))\n",
+        "print(is_sub_graph(graph_1, [1, 2, 3, 4, 5, 6, 7], [(4, 6)]))"
       ]
     },
     {
@@ -622,13 +677,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "metadata": {
-        "id": "DDBuGEfMYIQk"
+        "id": "DDBuGEfMYIQk",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8f0cc27d-f098-48c7-c7d7-d58875fafbd7"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "False\n",
+            "True\n"
+          ]
+        }
+      ],
       "source": [
-        "#TODO"
+        "def is_walk(graph, V):\n",
+        "  \n",
+        "  E = [(V[i], V[i+1]) for i in range(len(V) - 1)]\n",
+        "  for e in E:\n",
+        "    if graph.adjacency_matrix[e[0] - 1][e[1] - 1] == 0:\n",
+        "      return False\n",
+        "  return True\n",
+        "\n",
+        "print(is_walk(graph_1, [1, 2, 3, 4, 3, 6]))\n",
+        "print(is_walk(graph_1, [1, 4, 3, 6, 5, 2]))\n",
+        "print(is_walk(graph_1, [7, 5, 6, 3, 4, 1, 3, 4, 2]))"
       ]
     },
     {
@@ -645,13 +724,44 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "metadata": {
-        "id": "JUAHVgupYIQl"
+        "id": "JUAHVgupYIQl",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a4670182-15a8-4ce4-d71e-c8afa9430678"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n",
+            "True\n"
+          ]
+        }
+      ],
       "source": [
-        "#TODO"
+        "from collections import Counter \n",
+        "\n",
+        "def is_path(graph, V, cicle=False):\n",
+        "  contador = Counter(V)\n",
+        "  for v in V:\n",
+        "    if contador[v] != 1:\n",
+        "\n",
+        "      if cicle == True:\n",
+        "         if V[0] == v and V[-1] == v and contador[v] == 2:\n",
+        "           continue\n",
+        "      \n",
+        "      return False\n",
+        "    \n",
+        "  return is_walk(graph, V)\n",
+        "  # for k, v in contador[0]:\n",
+        "    # print(k, v)\n",
+        "  \n",
+        "print(is_path(graph_1, [1, 2, 3, 4, 3, 6]))\n",
+        "print(is_path(graph_1, [1, 2, 4, 3, 6]))"
       ]
     },
     {
@@ -668,13 +778,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {
-        "id": "Ojrm6bnfXhO6"
+        "id": "Ojrm6bnfXhO6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0604ca6f-69ea-4774-d944-c35724d848dd"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n",
+            "False\n",
+            "True\n"
+          ]
+        }
+      ],
       "source": [
-        "#TODO"
+        "def is_cicle(graph, V):\n",
+        "  return is_path(graph, V, True)\n",
+        "\n",
+        "print(is_cicle(graph_1, [1, 2, 3, 4, 3, 6]))\n",
+        "print(is_cicle(graph_1, [1, 2, 4, 3, 6, 1])) \n",
+        "print(is_cicle(graph_1, [1, 2, 4, 1])) "
       ]
     },
     {
@@ -691,13 +820,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {
         "id": "vZTwuOecXvMo"
       },
       "outputs": [],
       "source": [
-        "#TODO"
+        "# [1, 2, 4] test 1\n",
+        "# [1, 2, 4, 1, 3, 4] test 2\n",
+        "# [1, 2, 4, 3, 1, 4, 2] test 3"
       ]
     },
     {
